# owari-shop

./: .gitignore  Cargo.toml  README.md  over-sle-pt.wrangler.toml  wrangler.jsonc  wrangler.toml
.github/workflows/: main-ci.yml  pull-request-ci.yml
src/: favicon.rs  lib.rs  r2.rs  wildcardsubdomain.rs
static/: 3tuples.json  font.txt  index.html.tmpl  over-sle-pt.3tuples.json
